[build-system]
requires = ["meson-python>=0.16.0", "numpy"]
build-backend = "mesonpy"

[project]
name = "lowtran"
version = "3.1.0"
description = " Model of Earth atmosphere absorption and transmission vs. wavelength and location."
keywords = ["mesosphere", "stratosphere", "thermosphere", "atmosphere"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Programming Language :: Fortran",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
readme = {"file" = "README.md", "content-type" = "text/markdown"}

maintainers = [
  { name = "Chaffra Affouda", email = "caffouda@anduril.com" },
]

requires-python = ">=3.9"
dependencies = ["numpy", "xarray", "python-dateutil"]

[project.optional-dependencies]
test = ["pytest"]
lint = ["flake8", "flake8-bugbear", "flake8-builtins", "flake8-blind-except", "mypy", "types-python-dateutil"]


[tool.black]
line-length = 100

[tool.mypy]
files = ["src", "example"]
allow_redefinition = true
show_error_context = false
show_column_numbers = true
ignore_missing_imports = true
